--- a/_sass/mobile-example.scss
+++ b/_sass/mobile-example.scss
@@ -73,9 +73,12 @@ section {
       }
     }
   }
+}
 
-  &.fourth {
-  
-  }
+div.code {
+  background-color: #eee;
+  text-align: center;
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 
